stuck on a bug

--- a/src/styles/variables.scss
+++ b/src/styles/variables.scss
@@ -7,6 +7,11 @@ body {
   font-family: 'Amatic SC', cursive;
 }
 
+h1, h2, h3, h4, h5, h6, p {
+  margin: 0;
+  padding: 0;
+}
+
 $primary: #191970;
 $dark: #333;
 $font-weights: (
